--- a/test/unit.html
+++ b/test/unit.html
@@ -11,6 +11,9 @@
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
     <script src="../bower_components/requirejs/require.js"></script>
     <script src="./config.js"></script>
-    <script>require(['test/unit'])</script>
+    <script>
+        QUnit.config.autostart = false
+        require(['test/unit'])
+    </script>
 </body>
 </html>
