refactor by Typescript

--- a/test/unit.html
+++ b/test/unit.html
@@ -13,7 +13,7 @@
     <script src="./config.js"></script>
     <script>
         QUnit.config.autostart = false
-        require(['test/unit'])
+        require(['cjs!test/unit'])
     </script>
 </body>
 </html>
